--- a/normal2.ini
+++ b/normal2.ini
@@ -47,20 +47,20 @@ custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🚀 测速工具`select`.*`[]🎯 全球直连
 custom_proxy_group=🚀 GitHub`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌐 其他地区`.*`[]🎯 全球直连
-custom_proxy_group=📲 Telegram`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌐 其他地区`.*`[]🎯 全球直连
+custom_proxy_group=📲 Telegram`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌐 其他地区`.*`[]🎯 全球直连`[]🕊️ 便宜节点
 custom_proxy_group=🤖 AI`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌐 其他地区`.*`[]🎯 全球直连
 custom_proxy_group=🎶 TikTok`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌐 其他地区`.*`[]🎯 全球直连
-custom_proxy_group=📹 YouTube`select`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌐 其他地区`.*`[]🎯 全球直连
+custom_proxy_group=📹 YouTube`select`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌐 其他地区`.*`[]🎯 全球直连`[]🕊️ 便宜节点
 custom_proxy_group=🎥 Netflix`select`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌐 其他地区`.*`[]🎯 全球直连
 custom_proxy_group=🎻 Spotify`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌐 其他地区`.*`[]🎯 全球直连
-custom_proxy_group=🕊️ Twitter(X)`select`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌐 其他地区`.*`[]🎯 全球直连
+custom_proxy_group=🕊️ Twitter(X)`select`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌐 其他地区`.*`[]🎯 全球直连`[]🕊️ 便宜节点
 custom_proxy_group=🌍 国内媒体`select`[]🎯 全球直连`[]🇹🇼 台湾节点`[]🇭🇰 香港节点
-custom_proxy_group=🌍 国外媒体`select`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌐 其他地区`.*`[]🎯 全球直连
+custom_proxy_group=🌍 国外媒体`select`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌐 其他地区`.*`[]🎯 全球直连`[]🕊️ 便宜节点
 custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌐 其他地区`[]🎯 全球直连
 custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换
 custom_proxy_group=🎮 Nintendo`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌐 其他地区
 custom_proxy_group=🎮 Steam`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌐 其他地区
-custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌐 其他地区`.*`[]🎯 全球直连`[]🕊️便宜节点
+custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌐 其他地区`.*`[]🎯 全球直连`[]🕊️ 便宜节点
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🕊️ 便宜节点`select`(?=.*(0.5|0.5倍|0.5x|0.1|0.1倍|0.1x))
 custom_proxy_group=🇭🇰 香港节点`select`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`300,,50
